--- a/branches/1.8.3/res/xml/lime_dayi.xml
+++ b/branches/1.8.3/res/xml/lime_dayi.xml
@@ -1,107 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-/* 
-**
-** Copyright 2008, The Android Open Source Project
-**
-** Licensed under the Apache License, Version 2.0 (the "License"); 
-** you may not use this file except in compliance with the License. 
-** You may obtain a copy of the License at 
-**
-**     http://www.apache.org/licenses/LICENSE-2.0 
-**
-** Unless required by applicable law or agreed to in writing, software 
-** distributed under the License is distributed on an "AS IS" BASIS, 
-** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
-** See the License for the specific language governing permissions and 
-** limitations under the License.
-*/
--->
-
+	<!--
+		/* ** ** Copyright 2008, The Android Open Source Project ** **
+		Licensed under the Apache License, Version 2.0 (the "License"); ** you
+		may not use this file except in compliance with the License. ** You
+		may obtain a copy of the License at ** **
+		http://www.apache.org/licenses/LICENSE-2.0 ** ** Unless required by
+		applicable law or agreed to in writing, software ** distributed under
+		the License is distributed on an "AS IS" BASIS, ** WITHOUT WARRANTIES
+		OR CONDITIONS OF ANY KIND, either express or implied. ** See the
+		License for the specific language governing permissions and **
+		limitations under the License. */
+	-->
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-    android:keyWidth="10%p"
-    android:horizontalGap="0px"
-    android:verticalGap="0px"
-    android:keyHeight="@dimen/key_height_2"
-    >
+	android:keyWidth="10%p" android:horizontalGap="0px"
+	android:verticalGap="0px" android:keyHeight="@dimen/key_height">
 
-    <Row>
-        <Key android:codes="96" android:iconPreview="@drawable/dayi_backquote_l" android:keyIcon="@drawable/dayi_backquote" android:keyEdgeFlags="left"/>
-        <Key android:codes="45" android:iconPreview="@drawable/dayi_dash_l" android:keyIcon="@drawable/dayi_dash" />
-        <Key android:codes="92" android:iconPreview="@drawable/dayi_backslash_l" android:keyIcon="@drawable/dayi_backslash" />
-        <Key android:codes="91" android:iconPreview="@drawable/dayi_mbraceleft_l" android:keyIcon="@drawable/dayi_mbraceleft" />
-        <Key android:codes="93" android:iconPreview="@drawable/dayi_mbraceright_l" android:keyIcon="@drawable/dayi_mbraceright" />
-        <Key android:codes="39" android:iconPreview="@drawable/dayi_singlequote_l" android:keyIcon="@drawable/dayi_singlequote" />
-        <Key android:codes="44" android:iconPreview="@drawable/dayi_comma_l" android:keyIcon="@drawable/dayi_comma" />
-        <Key android:codes="46" android:iconPreview="@drawable/dayi_dot_l" android:keyIcon="@drawable/dayi_dot" />
-        <Key android:codes="47" android:iconPreview="@drawable/dayi_slash_l" android:keyIcon="@drawable/dayi_slash"/>
-        <Key android:codes="61" android:keyLabel="=" android:keyEdgeFlags="right"/>
-     </Row>
-     
-    <Row>
-        <Key android:codes="49" android:iconPreview="@drawable/dayi_1_l" android:keyIcon="@drawable/dayi_1" android:keyEdgeFlags="left"/>
-        <Key android:codes="50" android:iconPreview="@drawable/dayi_2_l" android:keyIcon="@drawable/dayi_2" />
-        <Key android:codes="51" android:iconPreview="@drawable/dayi_3_l" android:keyIcon="@drawable/dayi_3" />
-        <Key android:codes="52" android:iconPreview="@drawable/dayi_4_l" android:keyIcon="@drawable/dayi_4" />
-        <Key android:codes="53" android:iconPreview="@drawable/dayi_5_l" android:keyIcon="@drawable/dayi_5" />
-        <Key android:codes="54" android:iconPreview="@drawable/dayi_6_l" android:keyIcon="@drawable/dayi_6" />
-        <Key android:codes="55" android:iconPreview="@drawable/dayi_7_l" android:keyIcon="@drawable/dayi_7" />
-        <Key android:codes="56" android:iconPreview="@drawable/dayi_8_l" android:keyIcon="@drawable/dayi_8" />
-        <Key android:codes="57" android:iconPreview="@drawable/dayi_9_l" android:keyIcon="@drawable/dayi_9" />
-        <Key android:codes="48" android:iconPreview="@drawable/dayi_0_l" android:keyIcon="@drawable/dayi_0"  android:keyEdgeFlags="right"/>
-     </Row>
-       
-     <Row>
-        <Key android:codes="113" android:iconPreview="@drawable/dayi_q_s_l" android:keyIcon="@drawable/dayi_q_s" android:keyEdgeFlags="left"/>
-        <Key android:codes="119" android:iconPreview="@drawable/dayi_w_s_l" android:keyIcon="@drawable/dayi_w_s"/>
-        <Key android:codes="101" android:iconPreview="@drawable/dayi_e_s_l" android:keyIcon="@drawable/dayi_e_s"/>
-        <Key android:codes="114" android:iconPreview="@drawable/dayi_r_s_l" android:keyIcon="@drawable/dayi_r_s"/>
-        <Key android:codes="116" android:iconPreview="@drawable/dayi_t_s_l" android:keyIcon="@drawable/dayi_t_s"/>
-        <Key android:codes="121" android:iconPreview="@drawable/dayi_y_s_l" android:keyIcon="@drawable/dayi_y_s"/>
-        <Key android:codes="117" android:iconPreview="@drawable/dayi_u_s_l" android:keyIcon="@drawable/dayi_u_s"/>
-        <Key android:codes="105" android:iconPreview="@drawable/dayi_i_s_l" android:keyIcon="@drawable/dayi_i_s"/>
-        <Key android:codes="111" android:iconPreview="@drawable/dayi_o_s_l" android:keyIcon="@drawable/dayi_o_s"/>
-        <Key android:codes="112" android:iconPreview="@drawable/dayi_p_s_l" android:keyIcon="@drawable/dayi_p_s" android:keyEdgeFlags="right"/>
-    </Row>
-    
-    <Row>
-        <Key android:codes="97" android:iconPreview="@drawable/dayi_a_s_l" android:keyIcon="@drawable/dayi_a_s" android:keyEdgeFlags="left"/>
-        <Key android:codes="115" android:iconPreview="@drawable/dayi_s_s_l" android:keyIcon="@drawable/dayi_s_s"/>
-        <Key android:codes="100" android:iconPreview="@drawable/dayi_d_s_l" android:keyIcon="@drawable/dayi_d_s"/>
-        <Key android:codes="102" android:iconPreview="@drawable/dayi_f_s_l" android:keyIcon="@drawable/dayi_f_s"/>
-        <Key android:codes="103" android:iconPreview="@drawable/dayi_g_s_l" android:keyIcon="@drawable/dayi_g_s"/>
-        <Key android:codes="104" android:iconPreview="@drawable/dayi_h_s_l" android:keyIcon="@drawable/dayi_h_s"/>
-        <Key android:codes="106" android:iconPreview="@drawable/dayi_j_s_l" android:keyIcon="@drawable/dayi_j_s"/>
-        <Key android:codes="107" android:iconPreview="@drawable/dayi_k_s_l" android:keyIcon="@drawable/dayi_k_s"/>
-        <Key android:codes="108" android:iconPreview="@drawable/dayi_l_s_l" android:keyIcon="@drawable/dayi_l_s"/>
-        <Key android:codes="59" android:iconPreview="@drawable/dayi_semicolon_l" android:keyIcon="@drawable/dayi_semicolon" android:keyEdgeFlags="right"/>
-    </Row>
-    
-    <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift" 
-                android:keyWidth="15%p" android:isModifier="true"
-                android:isSticky="true" android:keyEdgeFlags="left"/>
-        <Key android:codes="122" android:iconPreview="@drawable/dayi_z_s_l" android:keyIcon="@drawable/dayi_z_s"/>
-        <Key android:codes="120" android:iconPreview="@drawable/dayi_x_s_l" android:keyIcon="@drawable/dayi_x_s"/>
-        <Key android:codes="99" android:iconPreview="@drawable/dayi_c_s_l" android:keyIcon="@drawable/dayi_c_s"/>
-        <Key android:codes="118" android:iconPreview="@drawable/dayi_v_s_l" android:keyIcon="@drawable/dayi_v_s"/>
-        <Key android:codes="98" android:iconPreview="@drawable/dayi_b_s_l" android:keyIcon="@drawable/dayi_b_s"/>
-        <Key android:codes="110" android:iconPreview="@drawable/dayi_n_s_l" android:keyIcon="@drawable/dayi_n_s"/>
-        <Key android:codes="109" android:iconPreview="@drawable/dayi_m_s_l" android:keyIcon="@drawable/dayi_m_s"/>
-        <Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete" 
-                android:keyWidth="15%p" android:keyEdgeFlags="right"
-                android:isRepeatable="true"/>
-    </Row>
-    
-    <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done" android:keyWidth="15%p" android:keyEdgeFlags="left"/>                
-        <Key android:codes="-9" android:keyIcon="@drawable/sw" android:iconPreview="@drawable/sw_l"/>
-        <Key android:codes="44" android:keyLabel="," android:keyWidth="10%p"/>
-        <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="30%p" android:isRepeatable="true"/>
-        <Key android:codes="46" android:keyLabel="." android:keyWidth="10%p"/>
-        <Key android:codes="-2" android:keyIcon="@drawable/number" android:iconPreview="@drawable/number_l"/>
-        <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
-    </Row>
-    
+	<Row>
+		<Key android:codes="49" android:keyLabel="1" android:keyEdgeFlags="left" />
+		<Key android:codes="50" android:keyLabel="2" />
+		<Key android:codes="51" android:keyLabel="3" />
+		<Key android:codes="52" android:keyLabel="4" />
+		<Key android:codes="53" android:keyLabel="5" />
+		<Key android:codes="54" android:keyLabel="6" />
+		<Key android:codes="55" android:keyLabel="7" />
+		<Key android:codes="56" android:keyLabel="8" />
+		<Key android:codes="57" android:keyLabel="9" />
+		<Key android:codes="48" android:keyLabel="0" android:keyEdgeFlags="right" />
+	</Row>
+
+	<Row>
+		<Key android:codes="113" android:keyLabel="q"
+			android:keyEdgeFlags="left" />
+		<Key android:codes="119" android:keyLabel="w" />
+		<Key android:codes="101" android:keyLabel="e" />
+		<Key android:codes="114" android:keyLabel="r" />
+		<Key android:codes="116" android:keyLabel="t" />
+		<Key android:codes="121" android:keyLabel="y" />
+		<Key android:codes="117" android:keyLabel="u" />
+		<Key android:codes="105" android:keyLabel="i" />
+		<Key android:codes="111" android:keyLabel="o" />
+		<Key android:codes="112" android:keyLabel="p"
+			android:keyEdgeFlags="right" />
+	</Row>
+
+	<Row>
+		<Key android:codes="97" android:keyLabel="a" android:keyEdgeFlags="left" />
+		<Key android:codes="115" android:keyLabel="s" />
+		<Key android:codes="100" android:keyLabel="d" />
+		<Key android:codes="102" android:keyLabel="f" />
+		<Key android:codes="103" android:keyLabel="g" />
+		<Key android:codes="104" android:keyLabel="h" />
+		<Key android:codes="106" android:keyLabel="j" />
+		<Key android:codes="107" android:keyLabel="k" />
+		<Key android:codes="108" android:keyLabel="l" />
+		<Key android:codes="59" android:keyLabel=";" android:keyEdgeFlags="right" />
+	</Row>
+
+	<Row>
+		<Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"
+			android:keyWidth="15%p" android:isModifier="true" android:isSticky="true"
+			android:keyEdgeFlags="left" />
+		<Key android:codes="122" android:keyLabel="z" />
+		<Key android:codes="120" android:keyLabel="x" />
+		<Key android:codes="99" android:keyLabel="c" />
+		<Key android:codes="118" android:keyLabel="v" />
+		<Key android:codes="98" android:keyLabel="b" />
+		<Key android:codes="110" android:keyLabel="n" />
+		<Key android:codes="109" android:keyLabel="m" />
+		<Key android:codes="-5" android:keyIcon="@drawable/sym_keyboard_delete"
+			android:keyWidth="15%p" android:keyEdgeFlags="right"
+			android:isRepeatable="true" />
+	</Row>
+
+
+	<Row android:rowEdgeFlags="bottom">
+		<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done"
+			android:keyWidth="15%p" android:keyEdgeFlags="left" />
+		<Key android:codes="64" android:keyLabel="\@" android:keyWidth="10%p" />
+
+		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"
+			android:keyWidth="30%p" android:isRepeatable="true" />
+		<Key android:codes="44" android:keyLabel="," android:keyWidth="10%p" />
+		<Key android:codes="46" android:keyLabel="." android:keyWidth="10%p" />
+		<Key android:codes="47" android:keyLabel="/" android:keyWidth="10%p" />
+		<Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return"
+			android:keyWidth="15%p" android:keyEdgeFlags="right" />
+	</Row>
 </Keyboard>
     
