--- a/branches/jeremy/res/xml/lime_cj_shift.xml
+++ b/branches/jeremy/res/xml/lime_cj_shift.xml
@@ -72,7 +72,10 @@
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="15%p" android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="58" android:keyLabel=":"  android:keyWidth="10%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="25%p" android:isRepeatable="true"/>
-        <Key android:codes="59" android:keyLabel=";" android:keyWidth="10%p"/>
+        <Key android:codes="59" 
+        		android:keyLabel=";" 
+        		android:popupKeyboard="@xml/popup_punctuation"  
+        		android:keyWidth="10%p"/>
         <Key android:codes="-2" android:keyIcon="@drawable/number" android:iconPreview="@drawable/number_l"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
