--- a/branches/jeremy/res/xml/lime_dayi.xml
+++ b/branches/jeremy/res/xml/lime_dayi.xml
@@ -76,14 +76,16 @@
 	<Row android:rowEdgeFlags="bottom">
 		<Key android:codes="-3" android:keyIcon="@drawable/sym_keyboard_done"
 			android:keyWidth="15%p" android:keyEdgeFlags="left" />
-		<Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="10%p" android:iconPreview="@drawable/sw_l"/>
+		<Key android:codes="-9" 
+				android:keyIcon="@drawable/sw" 
+				android:keyWidth="10%p" 
+				android:iconPreview="@drawable/sw_l"/>
 		<Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"
 			android:keyWidth="30%p" android:isRepeatable="true" />
 		<Key android:codes="44" android:keyLabel="," android:keyWidth="10%p" />
 		<Key android:codes="46" 
 				android:keyLabel="."
-				android:popupKeyboard="@xml/popup_template"
-                android:popupCharacters="@string/chinese_punctuation"  
+				android:popupKeyboard="@xml/popup_c_punctuation"   
 				android:keyWidth="10%p" />
 		<Key android:codes="47" android:keyLabel="/" android:keyWidth="10%p" />
 		<Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return"
