--- a/branches/jeremy/res/xml/lime_number_shift.xml
+++ b/branches/jeremy/res/xml/lime_number_shift.xml
@@ -34,8 +34,8 @@
         <Key android:codes="42" android:keyLabel="*"/>
         <Key android:codes="33" android:keyLabel="!"/>
         <Key android:codes="47" android:keyLabel="/"/>
-        <Key android:codes="91" android:keyLabel="["/>
-        <Key android:codes="93" android:keyLabel="]" android:keyEdgeFlags="right"/>
+        <Key android:codes="40" android:keyLabel="("/>
+        <Key android:codes="41" android:keyLabel=")" android:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
@@ -85,7 +85,10 @@
         <Key android:codes="-9" android:keyIcon="@drawable/sw" android:keyWidth="15%p" android:iconPreview="@drawable/sw_l"/>
         <Key android:codes="58" android:keyLabel=":" android:keyWidth="10%p"/>
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space_lime"  android:keyWidth="25%p" android:isRepeatable="true"/>
-        <Key android:codes="59" android:keyLabel=";" android:keyWidth="10%p"/>
+        <Key android:codes="59" 
+        		android:keyLabel=";"
+        		android:popupKeyboard="@xml/popup_c_punctuation"   
+        		android:keyWidth="10%p"/>
         <Key android:codes="-2" android:keyIcon="@drawable/number" android:iconPreview="@drawable/number_l"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
