--- a/branches/jeremy/res/xml/symbols.xml
+++ b/branches/jeremy/res/xml/symbols.xml
@@ -46,7 +46,7 @@
         <Key android:codes="38" android:keyLabel="&amp;"/>
         <Key android:codes="42" android:keyLabel="*"/>
         <Key android:codes="45" android:keyLabel="-"/>
-        <Key android:codes="61" android:keyLabel="="/>
+        <Key android:codes="61" android:keyLabel="+"/>
         <Key android:codes="40" android:keyLabel="("/>
         <Key android:codes="41" android:keyLabel=")" android:keyEdgeFlags="right"/>
     </Row>
@@ -73,7 +73,9 @@
         <Key android:codes="-2" android:keyLabel="LIME" android:keyWidth="15%p" />
         <Key android:codes="44" android:keyLabel="," android:keyWidth="10%p" />
         <Key android:codes="32" android:keyIcon="@drawable/sym_keyboard_space" android:keyWidth="30%p" android:isRepeatable="true"/>
-        <Key android:codes="46" android:keyLabel="." android:keyWidth="10%p"/>
+        <Key android:codes="46" android:keyLabel="." 
+        						android:popupKeyboard="@xml/popup_punctuation" 
+        						android:keyWidth="10%p"/>
         <Key android:codes="10" android:keyIcon="@drawable/sym_keyboard_return"
                 android:keyWidth="20%p" android:keyEdgeFlags="right"
                 />
