1. Three row remapping function finished. 2. bpmf cj dayi.cin and assoc.lime are now store in res/raw and will copy to /sdcard/lime if the target file is not exist.

--- a/branches/jeremy/res/xml/preference.xml
+++ b/branches/jeremy/res/xml/preference.xml
@@ -15,6 +15,10 @@
 				android:entries="@array/keyboard"
 				android:entryValues="@array/keyboard_codes"
 				android:dialogTitle="@string/keyboard_list" />
+         <CheckBoxPreference
+                android:key="three_rows_remapping"
+                android:title="@string/three_rows_remapping" 
+                android:summary="@string/three_rows_remapping_summary" />
         <CheckBoxPreference
                 android:key="vibrate_on_keypress"
                 android:title="@string/vibrate_on_keypress" />
