Modified the similar_list preference to "30, 50, 100, 150, 200" and default at 150.  The constructor of preference tab will commit the value to 150 if the original one is < 30.

--- a/branches/jeremy/res/xml/preference.xml
+++ b/branches/jeremy/res/xml/preference.xml
@@ -105,7 +105,8 @@
 				android:title="@string/similiar_list"
 				android:entries="@array/similiar_codes"
 				android:entryValues="@array/similiar_codes"
-				android:dialogTitle="@string/similiar_list" />
+				android:dialogTitle="@string/similiar_list" 
+				android:defaultValue="150"/>
         <CheckBoxPreference
                 android:key="candidate_switch"
                 android:title="@string/candidate_switch"
