1. bugfix on switchkeyboard and popup composing. 2. known bug: popup composing will not show after minputview closed and hidecomposing.

--- a/branches/jeremy/res/values/dimens.xml
+++ b/branches/jeremy/res/values/dimens.xml
@@ -21,6 +21,7 @@
     <dimen name="phone_key_height">48dip</dimen>
     <dimen name="key_height">54dip</dimen>
     <dimen name="key_height_2">40dip</dimen>
+    <dimen name="spacebar_vertical_correction">4dip</dimen>
     <dimen name="candidate_font_height">32sp</dimen>
     <dimen name="candidate_vertical_padding">6sp</dimen>
 </resources>
