First integration of latest LatineIME code. 1. English keyboard is now independent and has different bottom row in URL, email mode. 2. Autocompletion is not yet activated. known bugs. 1. Popup composing bug is not solved yet. 2. Shift lock feature is not yet finished

--- a/branches/jeremy/res/xml/lime_phonetic_shift.xml
+++ b/branches/jeremy/res/xml/lime_phonetic_shift.xml
@@ -78,7 +78,7 @@
         <Key android:codes="78" android:iconPreview="@drawable/phonetic_n_u_l" android:keyIcon="@drawable/phonetic_n_u"/>
         <Key android:codes="77" android:iconPreview="@drawable/phonetic_m_u_l" android:keyIcon="@drawable/phonetic_m_u"/>
         <Key android:codes="59" android:iconPreview="@drawable/phonetic_semicolon_l" android:keyIcon="@drawable/phonetic_semicolon"/>
-        <Key android:codes="-5" android:iconPreview="@drawable/del_l" android:keyIcon="@drawable/del" android:keyEdgeFlags="right" android:isRepeatable="true"/>
+        <Key android:codes="-5" android:iconPreview="@drawable/sym_keyboard_feedback_delete" android:keyIcon="@drawable/sym_keyboard_delete" android:keyEdgeFlags="right" android:isRepeatable="true"/>
     </Row>
 
     <Row android:rowEdgeFlags="bottom">
