--- a/branches/beta/res/layout/setting.xml
+++ b/branches/beta/res/layout/setting.xml
@@ -19,10 +19,8 @@
 		android:paddingBottom="10px">
 		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
 			android:layout_height="wrap_content">
-			<TextView android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@string/lime_setting_title"
-				android:text="@string/lime_setting_title"></TextView>
-		</TableRow>
+			
+		</TableRow><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@string/lime_setting_title" android:text="@string/lime_setting_title"></TextView>
 		<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
 			android:layout_height="wrap_content">
 			<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
@@ -165,6 +163,29 @@
 					android:text="@string/lime_setting_operation_info2"></TextView>
 				<TextView android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:id="@+id/relatedtxtInfoAmount"></TextView>
+			</LinearLayout>
+		</TableRow>
+		
+		<TableRow android:id="@+id/TableRow22" android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+			<LinearLayout android:id="@+id/LinearLayout01"
+				android:layout_height="wrap_content" android:layout_width="fill_parent">
+				<TextView android:id="@+id/TextView02"
+					android:layout_width="wrap_content" android:layout_height="wrap_content"
+					android:text="@string/lime_setting_operation_info1_dictionary"></TextView>
+				<TextView android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:id="@+id/dictionarytxtInfoVersion"></TextView>
+			</LinearLayout>
+		</TableRow>
+		<TableRow android:id="@+id/TableRow23" android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+			<LinearLayout android:id="@+id/LinearLayout02"
+				android:layout_height="wrap_content" android:layout_width="fill_parent">
+				<TextView android:id="@+id/TextView04"
+					android:layout_width="wrap_content" android:layout_height="wrap_content"
+					android:text="@string/lime_setting_operation_info2"></TextView>
+				<TextView android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:id="@+id/dictionarytxtInfoAmount"></TextView>
 			</LinearLayout>
 		</TableRow>
 
